js/js.translator/testData/incremental/invalidation/inlineFunctionAsParamWithCrossModuleInliner/lib1/l1.6.kt
inline fun foo1(x: Int = 77) = x
inline fun foo2() = 88
inline fun foo3() = "foo3 update"
